# search_leads

./: README.md  app.py  pyproject.toml  search.py
data/: input.csv  output.csv  output_sample.csv
