[tool.poetry]
name = "search_leads"
version = "0.1.0"
description = ""
authors = ["kuribayashi <tktkchestnut@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.1.0"
chromedriver-binary = "^92.0.4515.107"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"
pysen = "^0.10.1"
isort = "5.10.1"
black = "21.10b0"
flake8 = "4.0.1"
mypy = "0.910"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = false
line_length = 130
py_version = "py37"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]